--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* intuitivni box-sizing */
 html {
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
 *,
 ::after,
@@ -14,6 +14,13 @@ body {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
+}
+
+.foto {
+  float: left; 
+  width: 100%;
 }
 
 /*
@@ -28,3 +35,29 @@ výchozí (=mobil) - 1 obrázek na řádku (tj. 12 obrázků pod sebou)
 širší než 800px  - 4 obrázky vedle sebe
 širší než 1000px - 6 obrázků vedle sebe
 */
+
+@media screen and (min-width: 500px) {
+
+  .foto {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 650px) {
+
+  .foto {
+    width: 33.33%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .foto {
+    width: 25%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .foto {
+    width: 16.66%;
+  }
+}
